# glTF-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Source/: Animation.cpp  Animation.h  AnimationPlayer.cpp  AnimationPlayer.h  Bloom.cpp  Bloom.h  BufferAllocator.cpp  BufferAllocator.h  Camera.h  CameraController.h  CommandContext.cpp  CommandContext.h  Common.h  Config.cpp  Config.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DirectXHelpers.h  EnvironmentMap.cpp  EnvironmentMap.h  File.cpp  File.h  ForwardPass.cpp  ForwardPass.h  Gltf.cpp  Gltf.h  GpuAllocator.cpp  GpuAllocator.h  GpuResources.cpp  GpuResources.h  GpuSkin.cpp  GpuSkin.h  Main.cpp  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  MultiBuffer.h  Pathtracer.cpp  Pathtracer.h  (+22 more)
Source/Shaders/: Background.ps.hlsl  Background.vs.hlsl  BloomDownsample.cs.hlsl  BloomUpsample.cs.hlsl  Bsdf.hlsli  Color.hlsli  Common.hlsli  ConvertEquirectangularToCubemap.cs.hlsl  FilterEnvironmentCubeMap.cs.hlsl  Forward.ps.hlsl  Forward.vs.hlsl  FullscreenTriangle.vs.hlsl  GenerateEnvironmentImportanceMap.cs.hlsl  GenerateEnvironmentImportanceMapLevel.cs.hlsl  GenerateMipLevel.cs.hlsl  GenerateMipLevelArray.cs.hlsl  Lights.hlsli  Material.hlsli  PathTracer.lib.hlsl  Random.hlsli  Sampling.hlsli  Skin.cs.hlsl  ToneMapper.ps.hlsl  Transforms.hlsli  TransmissionDownsample.cs.hlsl  Vertex.hlsli
